--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
 
+
 }
 .search{
     display: flex;
@@ -21,12 +22,44 @@
     display: flex;
     flex-direction:column;
 
+}
+.listContentdiv{
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+
 
 }
+
 .listContentListElement{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     border-style: ridge;
-    border-radius:5px;
     margin: 5px;
+    border-color: white;
+    border-radius:10px;
+    overflow: hidden;
+    box-shadow: -5px 0px 0px 1px #EA5455;
+    width: 350px;
+    height: 40px;
+
+
+}
+.titletext{
+    display: flex;
+    justify-content: start;
+    width: 150px;
+    overflow: hidden;
+}
+.Icons{
+    margin-top:5px ;
+
+}
+.checkbox{
+     margin-right: 5px;
+    margin-left: 20px;
+
+}
+.deleteOutlined{
+    margin-right: 20px;
 }
