--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -45,12 +45,12 @@
 
 
 }
-/*.titletext{*/
-/*    display: flex;*/
-/*    justify-content: start;*/
-/*    width: 150px;*/
-/*    overflow: hidden;*/
-/*}*/
+.titleText{
+    display: flex;
+    justify-content: start;
+    width: 150px;
+    overflow: hidden;
+}
 
 .Icons{
     margin-top:5px ;
