--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -1,9 +1,15 @@
 .container{
     display: flex;
     justify-content: center;
+    background: transparent;
 
 }
+.headerCol{
+    background: transparent;
+}
+
 .headerParagraph{
+    background: transparent;
     position: relative;
     margin-top: 30px;
     font-size: 5em;
@@ -12,7 +18,7 @@
     text-transform: uppercase;
     width: 100%;
     text-align: center;
-    -webkit-box-reflect:below 1px linear-gradient(transparent,#0004);
+    -webkit-box-reflect:below 4px linear-gradient(transparent,rgba(255, 196, 196, 0.2));
     line-height: 0.70em;
     outline: none;
     animation: animate 5s linear infinite;
@@ -20,40 +26,41 @@
 
 @keyframes animate {
     0%{
-        color: #0e3742;
+        color: #FFC4C4;
         text-shadow: none;
     }
     100%{
         color: #fff;
-        text-shadow: 0 0 10px #03bcf4,
-        0 0 20px #03bcf4,
-        0 0 40px #03bcf4,
-        0 0 80px #03bcf4,
-        0 0 160px #03bcf4;
+        text-shadow: 0 0 10px #FFC4C4,
+        0 0 20px #FFC4C4,
+        0 0 40px #FFC4C4,
+        0 0 80px #FFC4C4,
+        0 0 160px #FFC4C4;
     }
 
 }
 
 .search{
-
-
-
     display: flex;
     flex-direction:row;
-    justify-content:space-evenly;
-    margin: 20px;
-    padding: 10px;
+    justify-content:center;
+    /*margin: 20px;*/
+    /*padding: 10px;*/
     background: transparent;
-}
-.searchFormItem{
 
-    /*background: rgba(255,255,255,0.2);*/
-    /*border: none;*/
-    /*border-radius: 95px;*/
 }
+/*.searchFormItem{*/
+
+/*    background: transparent;*/
+/*    background: rgba(255,255,255,0.2);*/
+/*    border: none;*/
+/*    border-radius: 100px;*/
+/*}*/
 .searchInput{
-    height: 50px;
-    width: 100%;
+    /*margin-right:50px;*/
+    /*margin-left: 100px;*/
+    /*height: 50px;*/
+    /*width: 55%;*/
     background: rgba(255,255,255,0.2);
     border: none;
     outline: none;
@@ -66,9 +73,13 @@
 
 }
 .addButton{
+    margin-left: 5px;
     position: relative;
-    width: 50px;
+    width: 70px;
     height: 50px;
+    background: transparent;
+    border-style: none;
+
 }
 .addButtonParagraph{
     position: absolute;
@@ -92,6 +103,7 @@
     overflow: hidden;
     transition: 0.5s;
     backdrop-filter: blur(15px);
+
 }
 .addButtonParagraph:hover{
     letter-spacing: 2px;
@@ -112,30 +124,30 @@
 
 }
 .addButton::before{
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateY(-50%);
-    bottom: -5px;
-    width: 50px;
-    height: 40px;
-    background: #f00;
-    border-radius: 10px;
-    transition: 0.5s;
-    transition-delay: 0s
+    /*content: "";*/
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*transform: translateY(-50%);*/
+    /*bottom: -5px;*/
+    /*width: 50px;*/
+    /*height: 40px;*/
+    /*background: #f00;*/
+    /*border-radius: 10px;*/
+    /*transition: 0.5s;*/
+    /*transition-delay: 0s*/
 
 
 }
 .addButton:hover::before{
-    bottom: -0;
-    width: 50%;
-    height: 80%;
-    border-radius: 30px;
-    transition-delay: 0.5s;
-    box-shadow: 0 0 5px #E9DAC1,
-    0 0 15px #E9DAC1,
-    0 0 30px #E9DAC1,
-    0 0 60px #E9DAC1 ;
+    /*bottom: -0;*/
+    /*width: 50%;*/
+    /*height: 80%;*/
+    /*border-radius: 30px;*/
+    /*transition-delay: 0.5s;*/
+    /*box-shadow: 0 0 5px #E9DAC1,*/
+    /*0 0 15px #E9DAC1,*/
+    /*0 0 30px #E9DAC1,*/
+    /*0 0 60px #E9DAC1 ;*/
 
 }
 .addButton::after{
@@ -174,12 +186,14 @@
 }
 
 .listContentList{
+    margin-top: 20px;
     backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 20px;
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     width: 500px;
     padding: 20px;
+    /*background: transparent;*/
 
 }
 
@@ -220,10 +234,21 @@
     filter: blur(40px);
 }
 
+.checkbox{
 
-.titleText{
+    margin-left: 20px;
+    margin-bottom:6px;
+    background:transparent;
     display: flex;
-    justify-content: start;
+    /*justify-content: center;*/
+    align-items: center;
+}
+.titleText{
+    color: white;
+    display: flex;
+    /*justify-content: center;*/
+    margin-top: 10px;
+    align-items: center;
     width: 150px;
     overflow: hidden;
     background:transparent;
@@ -231,51 +256,116 @@
 }
 
 .Icons{
+    display: flex;
     margin-top:5px ;
     background:transparent;
 
 }
-.checkbox{
-     margin-right: 5px;
-    margin-left: 20px;
+
+.deleteIcon{
+    margin-right: 40px;
     background:transparent;
-
-
 }
-.deleteOutlined{
-    margin-right: 20px;
-    background-color:transparent;
-
+.updateIcon{
+    margin-right: 30px;
+    background:transparent;
 }
 .form{
-    margin-bottom: 100px;
+    margin-bottom: 10px;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1999;
+}
+.formItem{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: transparent;
+    border-radius: 50px;
+}
+.formColInput{
+    display: flex;
+    background: transparent;
+    flex-direction:row;
+    margin-top: 35px;
+    align-items:center;
+    color: white;
+    margin-right: 50px;
+}
+.formItemTitle{
+    color: white;
+
+}
+.formInputTitle{
+    background: rgba(255,255,255,0.2);
+    border: none;
+    outline: none;
+    margin-left: 20px;
+    padding: 10px 60px;
+    border-radius: 35px;
+    border: 1px solid rgba(255,255,255,0.5);
+    border-right: 1px solid rgba(255,255,255,0.2) ;
+    border-left:  1px solid rgba(255,255,255,0.2);
+}
+.formItemContent{
+    margin-bottom: 15px;
+    color: white;
+
+}
+.formInputContent{
+    background: rgba(255,255,255,0.2);
+    border: none;
+    outline: none;
+    margin-left: 10px;
+    padding: 10px 60px;
+    border-radius: 35px;
+    border: 1px solid rgba(255,255,255,0.5);
+    border-right: 1px solid rgba(255,255,255,0.2) ;
+    border-left:  1px solid rgba(255,255,255,0.2);
+}
+
+.formCol{
+    background: transparent;
+
 }
 .formRadio{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background: transparent;
     display: flex;
+    justify-content: center;
+    color: white;
+    text-emphasis-color: red;
+    border-style: none;
 }
 .formRadio1{
-    margin-left: 15%;
-    color: #fff;
+    background: transparent;
+    color:white;
+}
+
+
+.formRadioParagraph{
+    background: transparent;
+    color: white;
 }
 .formItemButton{
-    position: absolute;
-    margin-left: 20%;
-    margin-bottom: 20%;
+    /*position: absolute;*/
+    /*margin-left:80px ;*/
+    /*margin-bottom: 20%;*/
     border-radius: 30px;
-    color: #fff;
-    z-index: 1;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-decoration: none;
-    overflow: hidden;
-    transition: 0.5s;
-    backdrop-filter: blur(15px);
 }
 .formButton{
     position: relative;
+    /*overflow: hidden;*/
+    /*margin-left: 350px;*/
     width: 110px;
     height: 50px;
+    border-width: 0;
+    border-radius: 30px;
 }
+
 .formButtonParagraph{
     position: absolute;
     top: 0;
@@ -317,34 +407,34 @@
     transform: skewX(45deg) translateX(100%);
 
 }
-.formButton::before{
-    content: "";
-    position: absolute;
-    left: 50%;
-    transform: translateY(-50%);
-    bottom: -5px;
-    width: 50px;
-    height: 40px;
-    background: #f00;
-    border-radius: 10px;
-    transition: 0.5s;
-    transition-delay: 0s
 
+/*.formButton::before {*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    left: 50%;*/
+/*    transform: translateY(-50%);*/
+/*    bottom: -5px;*/
+/*    width: 50px;*/
+/*    height: 40px;*/
+/*    background: #f00;*/
+/*    border-radius: 10px;*/
+/*    transition: 0.5s;*/
+/*    transition-delay: 0s*/
 
-}
-.formButton:hover::before{
-    bottom: -0;
-    width: 50%;
-    height: 80%;
-    border-radius: 30px;
-    transition-delay: 0.5s;
-    box-shadow: 0 0 5px #E9DAC1,
-    0 0 15px #E9DAC1,
-    0 0 30px #E9DAC1,
-    0 0 60px #E9DAC1 ;
+/*}*/
+/*.formButton:hover::before{*/
+/*    bottom: -0;*/
+/*    width: 50%;*/
+/*    height: 80%;*/
+/*    border-radius: 30px;*/
+/*    transition-delay: 0.5s;*/
+/*    box-shadow: 0 0 5px #E9DAC1,*/
+/*    0 0 15px #E9DAC1,*/
+/*    0 0 30px #E9DAC1,*/
+/*    0 0 60px #E9DAC1 ;*/
 
-}
-.formButton::after{
+/*}*/
+.formButton::after {
     content: "";
     position: absolute;
     left: 30%;
@@ -360,6 +450,7 @@
     0 0 15px #E9DAC1,
     0 0 30px #E9DAC1,
     0 0 60px #E9DAC1 ;
+
 
 
 }
