--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -44,38 +44,37 @@
     display: flex;
     flex-direction:row;
     justify-content:center;
-    /*margin: 20px;*/
-    /*padding: 10px;*/
+    padding: 10px;
     background: transparent;
-
+    border:1px solid rgba(255, 255, 255, 0.18);
+    /*border-radius: 30px;*/
+    margin-left: 10%;
+    margin-right: 10%;
+    /*backdrop-filter: blur(1px);*/
+    /*-webkit-backdrop-filter: blur(10px);*/
+    border-radius: 20px;
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
-/*.searchFormItem{*/
 
-/*    background: transparent;*/
-/*    background: rgba(255,255,255,0.2);*/
-/*    border: none;*/
-/*    border-radius: 100px;*/
-/*}*/
+
 .searchInput{
-    /*margin-right:50px;*/
-    /*margin-left: 100px;*/
-    /*height: 50px;*/
-    /*width: 55%;*/
     background: rgba(255,255,255,0.2);
     border: none;
     outline: none;
-    margin-top: 3px;
-    padding: 10px 60px;
+    /*margin-top: 1px;*/
+    padding: 13px 80px;
+    padding-top: 13px;
     border-radius: 35px;
-    border: 1px solid rgba(255,255,255,0.5);
-    border-right: 1px solid rgba(255,255,255,0.2) ;
-    border-left:  1px solid rgba(255,255,255,0.2);
+    border: none;
+    /*border: 1px solid rgba(255,255,255,0.5);*/
+    /*border-right: 1px solid rgba(255,255,255,0.2) ;*/
+    /*border-left:  1px solid rgba(255,255,255,0.2);*/
 
 }
 .addButton{
     margin-left: 5px;
     position: relative;
-    width: 70px;
+    width: 100px;
     height: 50px;
     background: transparent;
     border-style: none;
@@ -158,7 +157,7 @@
     top: 0px;
     width: 20px;
     height: 40px;
-    background: #f00;
+    /*background: #f00;*/
     border-radius: 10px;
     transition: 0.5s;
     transition-delay: 0s;
@@ -259,9 +258,7 @@
     display: flex;
     margin-top:5px ;
     background:transparent;
-
 }
-
 .deleteIcon{
     margin-right: 40px;
     background:transparent;
@@ -270,13 +267,22 @@
     margin-right: 30px;
     background:transparent;
 }
+.formContainer{
+    margin-top: 10px;
+
+}
+
 .form{
-    margin-bottom: 10px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    border-radius: 30px;
+    padding: 10px;
+    padding-bottom: 20px;
     background: transparent;
     display: flex;
     align-items: center;
     flex-direction: column;
-    z-index: 1999;
+    background: rgba(255,255,255,0.05);
+
 }
 .formItem{
     display: flex;
