--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -2,10 +2,16 @@
     display: flex;
     justify-content: center;
     background: transparent;
+    /*align-items: center;*/
 
 }
 .headerCol{
     background: transparent;
+    display: flex;
+    justify-content: center;
+    flex-direction:column;
+
+
 }
 
 .headerParagraph{
@@ -45,21 +51,17 @@
     flex-direction:row;
     justify-content:center;
     padding: 10px;
-    background: transparent;
-    border:1px solid rgba(255, 255, 255, 0.18);
-    /*border-radius: 30px;*/
-    margin-left: 10%;
-    margin-right: 10%;
+    /*border:1px solid rgba(255, 255, 255, 0.18);*/
     /*backdrop-filter: blur(1px);*/
     /*-webkit-backdrop-filter: blur(10px);*/
-    border-radius: 20px;
-    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+    /*border-radius: 20px;*/
+    /*box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);*/
 }
 
 
 .searchInput{
+    color: white;
     background: rgba(255,255,255,0.2);
-    border: none;
     outline: none;
     /*margin-top: 1px;*/
     padding: 13px 80px;
@@ -182,6 +184,7 @@
     display: flex;
     flex-direction:column;
 
+
 }
 
 .listContentList{
@@ -242,15 +245,24 @@
     /*justify-content: center;*/
     align-items: center;
 }
-.titleText{
-    color: white;
+.listText{
     display: flex;
+    flex-direction:column;
     /*justify-content: center;*/
     margin-top: 10px;
-    align-items: center;
+    align-items: start;
     width: 150px;
     overflow: hidden;
     background:transparent;
+
+}
+.listTitleText{
+    color: #FFD6EC;
+
+
+}
+.listContentText{
+    color: #EEEEEE;
 
 }
 
@@ -305,6 +317,7 @@
 
 }
 .formInputTitle{
+    color: white;
     background: rgba(255,255,255,0.2);
     border: none;
     outline: none;
@@ -321,6 +334,7 @@
 
 }
 .formInputContent{
+    color: white;
     background: rgba(255,255,255,0.2);
     border: none;
     outline: none;
