--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -207,7 +207,7 @@
     justify-content: space-between;
     color: #fff;
     border-radius: 10px;
-    border:3px solid rgba(255, 255, 255, 0.18);
+    /*box-shadow:  1px -2px 1px rgba(255, 214, 236, 0.1);*/
 }
 
 .listContentListElement:hover{
