--- a/components/TodoMain/TodoMain.module.css
+++ b/components/TodoMain/TodoMain.module.css
@@ -235,56 +235,68 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    align-items: center;
-    width: 150px;
+    margin-left:5px ;
+    align-items: start;
+    height: 50px;
     overflow: hidden;
     background:transparent;
 }
 
 .listTitleText{
+    width: 150px;
+    margin-left: 50px;
     color: white;
     position: relative;
     display: flex;
     overflow: hidden;
     transition: 0.5s;
-    width: 50%;
+
 }
 .listCheckbox:checked ~ .listTitleText{
     color: white;
+    text-decoration: line-through;
+
 }
 
 .listTitleText:before{
+
     content: "";
     position: absolute;
     top: 0;
-    left: -100%;
-    background: #2D0543;
+    left: -110%;
+    background: rgba(238, 241, 255, 0.5);
+    /*box-shadow:  10px 1px 1px rgba(238, 241, 255, 1);*/
     width: 100%;
     height: 100%;
-    transition: 0.1s;
+    transition: 0.2s;
     transition-delay: 0.1s;
+
 
 }
 .listCheckbox:checked ~ .listTitleText:before{
     left:100% ;
     transition-delay: 0s;
+
 }
 
-.listTitleText:after{
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0;
-    background: white;
-    width: 100%;
-    height: 1px;
-    transform-origin:left ;
-    transform: scaleX(0);
-    transition: 0.1s;
-    transition-delay: 0.1s;
-}
+/*.listTitleText:after{*/
+
+/*    content: "";*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 0;*/
+/*    background: white;*/
+/*    width: 100%;*/
+/*    height: 1px;*/
+/*    transform-origin:left ;*/
+/*    transform: scaleX(0);*/
+/*    transition: 0.1s;*/
+/*    transition-delay: 0.1s;*/
+
+/*}*/
 
 .listCheckbox:checked ~ .listTitleText:after{
+
     transition-delay: 0.1s;
     transform: scaleX(1);
 }
@@ -302,10 +314,10 @@
 }
 
 .listIcon:before{
-    content: "x";
+    content: "✓";
     position: absolute;
-    top: -5px;
-    left: 4px;
+    top: -4px;
+    left: 2px;
     transform: translateY(-100%);
     transition: 0.1s;
 }
